[gd_scene load_steps=7 format=3 uid="uid://bhroagne3v4wq"]

[ext_resource type="Script" path="res://Scenes/System Map/system_map.gd" id="1_nhsfb"]
[ext_resource type="Script" path="res://Scenes/System Map/camera.gd" id="2_miyro"]
[ext_resource type="Theme" uid="uid://dm3fbhtw7qov2" path="res://Scenes/System Map/system_map_HUD_theme.tres" id="3_djc4s"]
[ext_resource type="Texture2D" uid="uid://7klr1mcpbsc4" path="res://Graphics/go_to_icon.png" id="4_niwjs"]
[ext_resource type="Texture2D" uid="uid://dn8ug1anbuwpu" path="res://Graphics/orbit_icon.png" id="5_hp0se"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee55b"]
content_margin_left = 25.0
bg_color = Color(0.180392, 0.180392, 0.180392, 0.415686)
border_width_left = 20
border_color = Color(0.156863, 0.156863, 0.156863, 1)
corner_radius_bottom_left = 15

[node name="system_window" type="Window"]
disable_3d = true
transparent_bg = true
msaa_2d = 1
canvas_item_default_texture_filter = 0
title = "System Map"
position = Vector2i(0, 36)
size = Vector2i(1000, 1000)
min_size = Vector2i(1000, 1000)

[node name="system" type="Node2D" parent="."]
script = ExtResource("1_nhsfb")

[node name="camera" type="Camera2D" parent="system"]
script = ExtResource("2_miyro")

[node name="canvas" type="CanvasLayer" parent="system/camera"]

[node name="control" type="Control" parent="system/camera/canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="controls_label" type="Label" parent="system/camera/canvas/control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -188.0
offset_top = -47.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_djc4s")
text = "LMB: POINT SCOPES
RMB: LAY IN A COURSE"
horizontal_alignment = 2

[node name="tabs" type="TabContainer" parent="system/camera/canvas/control"]
custom_minimum_size = Vector2(450, 1000)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme = ExtResource("3_djc4s")
tab_alignment = 2

[node name="OVERVIEW" type="VBoxContainer" parent="system/camera/canvas/control/tabs"]
custom_minimum_size = Vector2(450, 950)
layout_mode = 2
theme = ExtResource("3_djc4s")

[node name="system_list" type="ItemList" parent="system/camera/canvas/control/tabs/OVERVIEW"]
custom_minimum_size = Vector2(450, 850)
layout_mode = 2
theme = ExtResource("3_djc4s")
allow_search = false
max_text_lines = 3
text_overrun_behavior = 4

[node name="actions_panel" type="Panel" parent="system/camera/canvas/control/tabs/OVERVIEW"]
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
theme = ExtResource("3_djc4s")

[node name="actions_scroll" type="HBoxContainer" parent="system/camera/canvas/control/tabs/OVERVIEW/actions_panel"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_djc4s")
alignment = 1

[node name="go_to_button" type="Button" parent="system/camera/canvas/control/tabs/OVERVIEW/actions_panel/actions_scroll"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
tooltip_text = "Lay in a course to selected body"
theme = ExtResource("3_djc4s")
icon = ExtResource("4_niwjs")
icon_alignment = 1
expand_icon = true

[node name="orbit_button" type="Button" parent="system/camera/canvas/control/tabs/OVERVIEW/actions_panel/actions_scroll"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
tooltip_text = "Lay in a course to selected body and orbit"
theme = ExtResource("3_djc4s")
icon = ExtResource("5_hp0se")
icon_alignment = 1
expand_icon = true

[node name="INFO" type="VBoxContainer" parent="system/camera/canvas/control/tabs"]
visible = false
custom_minimum_size = Vector2(450, 950)
layout_mode = 2
theme = ExtResource("3_djc4s")

[node name="follow_body_label" type="Label" parent="system/camera/canvas/control/tabs/INFO"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("3_djc4s")
theme_override_colors/font_color = Color(0.87451, 1, 0.862745, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ee55b")
vertical_alignment = 1
clip_text = true

[node name="body_attributes_list" type="ItemList" parent="system/camera/canvas/control/tabs/INFO"]
custom_minimum_size = Vector2(450, 900)
layout_mode = 2
theme = ExtResource("3_djc4s")

[node name="utilities_container" type="VBoxContainer" parent="system/camera/canvas/control"]
custom_minimum_size = Vector2(450, 500)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="close_requested" from="." to="system" method="_on_system_window_close_requested"]
[connection signal="item_clicked" from="system/camera/canvas/control/tabs/OVERVIEW/system_list" to="system" method="_on_system_list_item_clicked"]
[connection signal="mouse_entered" from="system/camera/canvas/control/tabs/OVERVIEW/system_list" to="system" method="_on_system_list_mouse_entered"]
[connection signal="mouse_exited" from="system/camera/canvas/control/tabs/OVERVIEW/system_list" to="system" method="_on_system_list_mouse_exited"]
[connection signal="mouse_entered" from="system/camera/canvas/control/tabs/OVERVIEW/actions_panel" to="system" method="_on_actions_panel_mouse_entered"]
[connection signal="mouse_exited" from="system/camera/canvas/control/tabs/OVERVIEW/actions_panel" to="system" method="_on_actions_panel_mouse_exited"]
[connection signal="mouse_entered" from="system/camera/canvas/control/tabs/OVERVIEW/actions_panel/actions_scroll/go_to_button" to="system" method="_on_go_to_button_mouse_entered"]
[connection signal="mouse_exited" from="system/camera/canvas/control/tabs/OVERVIEW/actions_panel/actions_scroll/go_to_button" to="system" method="_on_go_to_button_mouse_exited"]
[connection signal="pressed" from="system/camera/canvas/control/tabs/OVERVIEW/actions_panel/actions_scroll/go_to_button" to="system" method="_on_go_to_button_pressed"]
[connection signal="mouse_entered" from="system/camera/canvas/control/tabs/OVERVIEW/actions_panel/actions_scroll/orbit_button" to="system" method="_on_orbit_button_mouse_entered"]
[connection signal="mouse_exited" from="system/camera/canvas/control/tabs/OVERVIEW/actions_panel/actions_scroll/orbit_button" to="system" method="_on_orbit_button_mouse_exited"]
[connection signal="pressed" from="system/camera/canvas/control/tabs/OVERVIEW/actions_panel/actions_scroll/orbit_button" to="system" method="_on_orbit_button_pressed"]
